--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Я впервые разместил свой код на удаленном репозитории</h1>
+    <p>Изменения я которые позже удалю</p>
 </body>
 </html>
